--- a/sytle_formulario.css
+++ b/sytle_formulario.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 
 }
@@ -9,7 +8,8 @@
 body{
     height: 100vh;
     width: 100vw;
-    background-color: rgb(136, 236, 236);
+    background: rgb(0,0,36);
+    background: linear-gradient(120deg, rgba(0,0,36,1) 0%, rgba(11,133,80,1) 20%, rgba(41,212,83,1) 48%, rgba(103,230,179,1) 73%, rgba(200,255,213,1) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,9 +18,10 @@ body{
 .caixaForm{
     flex-direction: column;
     background-color: rgb(255, 255, 255);
-    padding: 60px;
+    padding: 50px;
     border-radius: 20px;
-    box-shadow: 5px 5px 5px rgba(0, 0,0, 0.2);
+    box-shadow: 5px 5px 10px 5px rgba(0, 0,0, 0.2);
+    
 }
 
 h2{
@@ -31,6 +32,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgb(99, 4, 99);
 }
 
 .form-control{
@@ -48,6 +50,10 @@ h2{
     margin-left: 70px;
     padding: 10px;
     font-size: 20px;
+    background-color: rgb(99, 4, 99);
+    border-color: rgb(99, 4, 99);
+    
+    
 }
 
 .area{
